--- a/src/components/presentation/controls/mapEditing/controlPanels/MapEditingControlPanel/MapEditingControlPanel.css
+++ b/src/components/presentation/controls/mapEditing/controlPanels/MapEditingControlPanel/MapEditingControlPanel.css
@@ -25,6 +25,14 @@
 .ptr-editing-control-panel-content-body {
 	padding: 1.5rem;
 }
+.ptr-editing-control-panel-section-title {
+	font-size: .9rem;
+	color: #333;
+	font-weight: 500;
+	text-transform: uppercase;
+	margin-bottom: 1rem;
+	line-height: 2;
+}
 .ptr-editing-control-panel-controls {
 	padding: 1rem 1.5rem 1.5rem;
 	background: #efc6cf;
