--- a/src/components/presentation/controls/mapEditing/MapEditingTools/MapEditingTools.css
+++ b/src/components/presentation/controls/mapEditing/MapEditingTools/MapEditingTools.css
@@ -80,18 +80,23 @@
 	width: 0;
 	height: 0;
 	overflow: hidden;
-	transition: height .3s ease-in-out .3s, width .3s ease-in-out;
+	transition: height .3s ease-in-out, width .3s ease-in-out .4s;
 }
 .ptr-map-editing-tools.open .map-editing-tools-content {
 	border-top: 1px solid #666;
 	width: 20rem;
-	height: 10rem;
+	transition: height .3s ease-in-out .4s, width .3s ease-in-out;
 }
 .map-editing-tool {
-	padding: .5rem;
+	margin: 1rem 1.5rem 0 .7rem;
 }
 .map-editing-tool-header {
 	font-size: .9rem;
 }
 .map-editing-tool-body {
+}
+
+/* Slider */
+.map-editing-slider {
+	margin: .3rem .2rem;
 }
