--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -809,6 +809,9 @@ body.mode-3d #top-toolbar-3dmap.disabled:not(.world-wind-2d) span {
 #top-toolbar .item#top-toolbar-scenarios::before {
 	background: url('../images/icons/scenarios.svg') center center no-repeat;
 }
+#top-toolbar .item#top-toolbar-views::before {
+	content: '\f06e';
+}
 
 
 /* Sidebar tools */
