--- a/src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
+++ b/src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
@@ -6,6 +6,7 @@
 	background-image: linear-gradient(160deg, rgba(33,38,53,1) 0%, rgba(33,38,53,1) 40%, rgba(55,41,57,1) 100%);
 }
 
+/* Scopes list */
 .scopes-list {
 	display: flex;
 	flex-direction: column;
@@ -47,4 +48,11 @@
 }
 .scopes-list-item.active {
 	background: rgba(153,54,75,.6);
+}
+
+/* Scopes intro box */
+.scope-intro-box {
+	background: white;
+	width: 100%;
+	margin: 2rem 4rem 2rem 0;
 }
