--- a/src/components/presentation/Intro/Intro.css
+++ b/src/components/presentation/Intro/Intro.css
@@ -7,14 +7,14 @@
 /* Header */
 .intro-screen-header:before {
 	content: "";
-	background: url('../../../img/panther/panther_background.jpg') no-repeat;
+	background: url('../../../img/panther/panther_background.jpg') center center no-repeat;
 	background-size: cover;
 	width: calc(100% + 20px);
 	height: calc(100% + 10px);
 	display: block;
 	position: absolute;
 	filter: blur(3px);
-	margin: -10px;
+	margin: -12px;
 }
 
 .intro-screen-header {
@@ -22,11 +22,11 @@
 }
 .intro-screen-title {
 	font-family: "Roboto", sans-serif;
-	font-size: 3.5rem;
+	font-size: 3rem;
 	font-weight: 300;
 	color: white;
 	background: rgba(153,54,75,.75);
-	padding: 6rem 3rem;
+	padding: 3rem;
 	text-align: center;
 	width: 100%;
 	z-index: 1;
@@ -40,6 +40,14 @@
 	flex: 1;
 	justify-content: center;
 	align-items: center;
+	flex-direction: column;
+}
+.intro-screen-logo {
+	margin-bottom: 2rem;
+	width: 20rem;
+}
+.intro-screen-logo > img {
+	width: 100%;
 }
 .intro-screen-content-text {
 	font-size: 1.05rem;
@@ -47,6 +55,11 @@
 	color: rgb(65,69,81);
 	text-align: center;
 	max-width: 40rem;
+	margin-bottom: 1rem;
+}
+.intro-screen-content-text > h2 {
+	font-size: 1.5rem;
+	font-weight: 400;
 	margin-bottom: 1rem;
 }
 .intro-screen-content-text > p {
