--- a/src/components/presentation/controls/ChangeReviewsList/ChangeReviewsList.css
+++ b/src/components/presentation/controls/ChangeReviewsList/ChangeReviewsList.css
@@ -5,13 +5,13 @@
 }
 .ptr-change-reviews-list-header {
 	background: rgba(153,54,75,1);
-	background-image: linear-gradient(160deg, rgba(123,54,75,1) 0%, rgba(173,54,75,1) 100%);
+	background-image: linear-gradient(160deg, rgba(123,54,75,1) 0%, rgba(193,54,75,1) 100%);
 	display: flex;
 	align-items: center;
 	padding: 1rem 1rem 3rem;
 }
 .ptr-change-reviews-list-title {
-	color: #eee;
+	color: rgba(208,212,220,1);
 	font-family: "Roboto", sans-serif;
 	flex: 1;
 	font-size: 2.3rem;
