--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,9 @@ body {
 	height: 3rem;
 	padding: .75rem;
 }
+.ptr-button.small {
+	height: 1.75rem;
+}
 
 .ptr-button:not(.disabled) {
 	cursor: pointer;
@@ -71,6 +74,10 @@ body {
 	font-size: .9375rem;
 	line-height: 1.5rem;
 	margin: 0 .25rem;
+}
+.ptr-button.small .ptr-button-caption {
+	font-size: .875rem;
+	line-height: 1.25rem;
 }
 
 .ptr-button {
