--- a/src/components/presentation/windows/ViewsWindow/ViewsWindow.css
+++ b/src/components/presentation/windows/ViewsWindow/ViewsWindow.css
@@ -1,6 +1,8 @@
 .views-window .ptr-window-content {
+	padding-top: 1px;
 	position: relative;
 	background: none;
+	height: calc(100% - 2.3rem);
 }
 .views-window .ptr-window-content .ptr-views-list {
 	position: absolute;
