--- a/src/index.css
+++ b/src/index.css
@@ -579,8 +579,12 @@ body {
 	border-bottom: 1px solid #ddd;
 	transition: background .3s ease-in-out;
 }
-.ptr-table-row:hover {
-	background: rgba(223,225,228,1);
+.ptr-table-row:hover,
+.ptr-table-row.active:hover {
+	background: rgba(213,216,220,1);
+}
+.ptr-table-row.active {
+	background: rgba(233,235,238,1);
 }
 .ptr-table-row-record {
 	display: flex;
@@ -588,9 +592,12 @@ body {
 	align-items: center;
 }
 .ptr-table-row-details {
-	height: 5rem;
-	padding: .5rem 1.5rem;
-	background: rgba(230,230,230,1);
+	display: none;
+	padding: 0 1.5rem 1.5rem;
+	overflow: hidden;
+}
+.ptr-table-row-details.open {
+	display: flex;
 }
 .ptr-table-row-item {
 	color: rgba(85,89,101,1);
