--- a/src/components/common/controls/User/style.css
+++ b/src/components/common/controls/User/style.css
@@ -7,12 +7,16 @@
 	flex-grow: 0;
 }
 
-.ptr-user-name {
+.ptr-user-name, .ptr-user-login {
 	height: 2rem;
 	padding: .25rem;
 	white-space: nowrap;
 	overflow: hidden;
 	line-height: 1.5rem;
 	font-size: .9375rem;
+}
+
+.ptr-user-login > a {
+	cursor: pointer;
 }
 
