--- a/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
@@ -7,26 +7,29 @@
 
 	display: flex;
 
-	background: #ff0;
+	color: #ddd;
+
+	background: #212635;
 }
 #dromasLpisChangeReviewHeader > div {
 	flex-grow: 1;
 }
 #dromasLpisChangeReviewHeader-case {
 	width: 30%;
-	background: #906;
+	/*background: #906;*/
 }
 #dromasLpisChangeReviewHeader-review {
 	width: 30%;
-	background: #6e8;
+	/*background: #6e8;*/
 }
 #dromasLpisChangeReviewHeader-actions {
 	width: 20%;
-	background: #f7a;
+	/*background: #f7a;*/
 }
 #dromasLpisChangeReviewHeader-tools {
 	width: 20%;
-	background: #cdf;
+	color: #222;
+	background: #f6f3e2;
 }
 
 #dromasLpisChangeReviewHeader > div {
@@ -59,7 +62,8 @@
 
 .ptr-dromasLpisChangeReviewHeader-expandable-content {
 	position: relative;
-	background: #13003a;
+	background: #212635;
+	overflow: hidden;
 }
 .ptr-dromasLpisChangeReviewHeader-expandable-content {
 	height: calc(115px - 2.2rem); /* whole header (old code dependent) - topBar height */
