--- a/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
@@ -127,10 +127,19 @@
 }
 .ptr-dromasLpisChangeReviewHeader-expandable-content-control {
 	position: absolute;
-	bottom: .25rem;
-	right: .25rem;
+	bottom: 0;
+	right: 0;
 }
 
 .ptr-dromasLpisChangeReviewHeader-expandable-content > div {
-	padding: .5rem;
+	padding: 0 .5rem .5rem .5rem;
+}
+
+
+#dromasLpisChangeReviewHeader p {
+	font-size: .875rem;
+	margin-bottom: 1rem;
+}
+.ptr-dromasLpisChangeReviewHeader-property {
+	color: rgb(181, 190, 201);
 }
