--- a/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
+++ b/src/components/scopeSpecific/DromasLpisChangeReview/header/style.css
@@ -140,6 +140,10 @@
 	padding: 0 .5rem .5rem .5rem;
 }
 
+.ptr-dromasLpisChangeReviewHeader-expandable-content .ptr-expand-row-button {
+	background: #484b56c2;
+}
+
 
 #dromasLpisChangeReviewHeader p {
 	font-size: .875rem;
